src/test/deca/context/invalid/declaVariable-readIntwrongType.context
declaVariable-readIntwrongType.deca:11:
